Fix text alignment in information div removed gap to the left of the text so that it is centered under the images.

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ button {
     font-size: 18px;
     max-width: 180px;
     text-align: center;
-    margin: 0 0 100px 0;
+    margin: 0 auto 100px auto;
 }
 
 .information {
